# NVGPUSchedulingAnalysis

./: .gitignore  CMakeLists.txt  README.md
NsightSysReport/: Project 1.qdproj  report1.nsys-rep
WorstSchedulingExps/: Makefile  gpu_sm_masking.cpp  gpu_sm_masking.hpp  matrix_mul_partitioning.cu  matrix_mul_partitioning_gpc.cu  matrix_mul_resource_constraint.cu  matrix_mul_test.cu
data/: training_data.json
data/reg-128/: training_data_stream1.json  training_data_stream2.json  training_data_stream4.json  training_data_stream8.json
data/reg-256/: training_data_stream1.json  training_data_stream2.json  (+6 more)
include/: CudaKernel.hpp  KernelConfig.hpp  KernelConfig2.hpp  KernelConfig4.hpp  KernelConfig5.hpp  KernelConfig6.hpp  KernelGenerator.cuh  KernelGenerator.hpp  KernelsExp1.cuh  KernelsExp4.cuh  KernelsExp6.cuh  SchedulingPredictor.hpp  StreamManager.hpp  TimerSpin.cuh
meeting_slide/: 3.22.pptx  3.29.pptx  3.8-Experiment-setting.pptx  4.12.pptx  4.19.pptx  4.26.pptx  4.5.pptx
profiling_results/: exp1.nsys-rep  exp2-swap.nsys-rep  exp2.nsys-rep  exp3-10G.nsys-rep  exp3.nsys-rep  exp4.nsys-rep  exp5.nsys-rep  exp6.nsys-rep
scripts/: Experiment1.ncu-rep  Experiment2.ncu-rep  Experiment4.ncu-rep  Experiment5.ncu-rep  Experiment6.ncu-rep  build.bat  build_exp1.bat  build_exp2.bat  build_exp3.bat  build_exp4.bat  build_exp5.bat  build_exp6.bat  build_testing_framework.bat  run_nsight_compute.bat  run_nsight_compute_exp1.bat  run_nsight_compute_exp2.bat  run_nsight_compute_exp3.bat  run_nsight_compute_exp4.bat  run_nsight_compute_exp5.bat  run_nsight_compute_exp6.bat
src/: Experiment1.cu  Experiment2.cu  Experiment3.cu  Experiment4.cu  Experiment5.cu  Experiment6.cu  KernelGenerator.cpp  KernelGenerator.cu  Kernels.cu  KernelsExp1.cu  KernelsExp4.cu  KernelsExp5.cu  KernelsExp6.cu  SchedulingPredictor.cpp  TestingFramework.cu  TimerSpin.cu
(+8 files in other folders)
